--- a/FirstProject/pom.xml
+++ b/FirstProject/pom.xml
@@ -22,6 +22,26 @@
             <artifactId>selenium-java</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hellojavaer</groupId>
+            <artifactId>poi-excel-utils</artifactId>
+            <version>1.1.0-beta</version>
+        </dependency>
 
     </dependencies>
 
